# mobile-autonomous-robot-with-lego-mindstorm-nvidia-jetson

./: LICENSE  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/control_toolbox/: ParametersConfig.h  SetPidGains.h  SetPidGainsRequest.h  SetPidGainsResponse.h
devel/include/h4r_ev3_msgs/: Seek.h
devel/share/common-lisp/ros/control_toolbox/srv/: SetPidGains.lisp  _package_SetPidGains.lisp
devel/share/common-lisp/ros/h4r_ev3_msgs/msg/: Seek.lisp  _package.lisp  _package_Seek.lisp  h4r_ev3_msgs-msg.asd
devel/share/control_toolbox/cmake/: control_toolbox-msg-extras.cmake  control_toolboxConfig-version.cmake  control_toolboxConfig.cmake
devel/share/control_toolbox/docs/: ParametersConfig-usage.dox  ParametersConfig.dox  ParametersConfig.wikidoc
devel/share/ev3_bringup/cmake/: ev3_bringupConfig.cmake
devel/share/ev3_nav/cmake/: ev3_navConfig.cmake
devel/share/gennodejs/ros/control_toolbox/srv/: SetPidGains.js
devel/share/gennodejs/ros/h4r_ev3_msgs/msg/: Seek.js  _index.js
devel/share/h4r_ev3_control/cmake/: h4r_ev3_controlConfig.cmake
devel/share/h4r_ev3_launch/cmake/: h4r_ev3_launchConfig.cmake
devel/share/h4r_ev3_manager/cmake/: h4r_ev3_managerConfig.cmake
devel/share/h4r_ev3_msgs/cmake/: h4r_ev3_msgs-msg-extras.cmake  h4r_ev3_msgs-msg-paths.cmake  h4r_ev3_msgsConfig.cmake
devel/share/roseus/ros/control_toolbox/: manifest.l
devel/share/roseus/ros/control_toolbox/srv/: SetPidGains.l
devel/share/roseus/ros/h4r_ev3_msgs/: manifest.l
devel/share/roseus/ros/h4r_ev3_msgs/msg/: Seek.l
src/: CMakeLists.txt
src/ev3_bringup/: CMakeLists.txt  package.xml
src/ev3_bringup/config/: motors.yaml
src/ev3_bringup/launch/: ir.launch  motors.launch  r200.launch
src/ev3_launch/config/: infrared.yaml
src/ev3_launch/launch/: motors.launch
src/ev3_nav/: CMakeLists.txt  package.xml  setup.py
src/ev3_nav/launch/: gmapping.launch  move_base.launch  move_base_blank_map.launch
