<package>
  <name>ev3_bringup</name>
  <version>0.0.1</version>

  <description>ROS EV3</description>

  <maintainer email="mikael@valdev.com">Mikael Valot</maintainer>
  <license>BSD</license>
  <url type="website">http://</url>
  <url type="bugtracker">https://</url>
  <author email="mikael@valdev.com">Mikael Valot</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
